fix windows batch file